--- a/src/app/components/bmiCalculator/bmi.component.html
+++ b/src/app/components/bmiCalculator/bmi.component.html
@@ -1,23 +1,3 @@
 <heading-component [message]="'BMI Calculator'"></heading-component>
-<table>
-    <tr>
-        <td>Height</td>
-        <td>
-            <input type = "text" #heightEditBox (input)="onHeightEdit(heightEditBox.value)" [value]="height"/>
-        </td>
-    </tr>
-    <tr>
-        <td>Weight</td>
-        <td>
-            <input type = "text" #weightEditBox (input)="onWeightEdit(weightEditBox.value)" [value]="weight"/>
-        </td>
-    </tr>
-    <tr>
-        <td><button (click)="calculateBMI()">CalculatBmi</button></td>
-        <td><button (click)="clear()">Clear</button></td>
-    </tr>
-    <tr>
-        <td>BMI:</td>
-        <td>{{bmi}}</td>
-    </tr>
-</table>
+<app-bmi-input (inputAvailableEvent)="calculateBMI($event)"></app-bmi-input>
+<app-bmi-result [bmi]="bmiResult"></app-bmi-result>
